--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,5 +1,6 @@
 .home-container {
   width: 100%;
+  position: relative;
 }
 
 .top-banner {
@@ -19,6 +20,32 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.search-container {
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1000px;
+  z-index: 1;
+}
+
+.search-input {
+  width: 100%;
+  height: 70px;
+  border-radius: 35px;
+  border: none;
+  padding: 0 35px;
+  font-size: 1.3rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.search-input:focus {
+  outline: none;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
 }
 
 .banner-logo {
